Remove duplicate body rule in CSS and overflow as it was causing a bug with the scrolling on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 
 body {
     height: 97vh;
-    overflow: hidden;
     width: 80vw;
     align-content: center;
     margin: auto 0;
@@ -33,7 +32,7 @@ img {
 
 body {
     height: 97vh;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 80vw;
     align-content: center;
     margin: auto 0;
